# alfred-docsrs

./: .gitignore  Cargo.toml  README.md  package.sh  release.sh
.github/workflows/: build.yml  release.yml  rust.yml
src/: main.rs
workflow/: info.plist
