[package]
name = "docsrs"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
rustdoc-seeker = { git = "https://github.com/gfreezy/rustdoc_seeker", rev = "2cf44e27" }
alfred = "4.0.2"
anyhow = "1.0.25"
fst = { version = "0.3", default-features = false }
regex = "1.3.1"
sled = "0.29.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.7"
